--- a/root/index.html
+++ b/root/index.html
@@ -283,6 +283,12 @@
                               <i class="fas fa-bolt me-2"></i>Deliver Shock
                            </button>
                            <small class="d-block shock-description mt-1">Simulates defibrillation. Resets rhythm to selected.</small>
+                             <div class="mt-2">
+                                <button id="ecg-cpr-toggle" class="btn btn-danger" type="button">
+                                   <i class="fas fa-hand-holding-medical me-2"></i>Toggle CPR Artifact
+                                </button>
+                                <small class="d-block text-muted mt-1">Overrides current ECG and vitals with CPR artifact while active.</small>
+                             </div>
                         </div>
                      </div>
                      <hr class="border-secondary" />
