--- a/root/index.html
+++ b/root/index.html
@@ -34,6 +34,9 @@
                     <button id="btn-mode-join" class="btn btn-secondary btn-lg w-100 py-3">
                         Join Existing Session
                     </button>
+                  <button id="btn-mode-sessions" class="btn btn-outline-info btn-lg w-100 mt-3 py-3">
+                     <i class="fas fa-list me-2"></i> Current Sessions
+                  </button>
                 </div>
 
                 <div id="landing-join" class="d-none">
@@ -42,6 +45,12 @@
                     <button id="btn-landing-join-action" class="btn btn-success w-100 py-3 mb-2">Join</button>
                     <button id="btn-join-back" class="btn btn-outline-light w-100 mt-2">&larr; Back to Home</button>
                 </div>
+
+               <div id="landing-sessions" class="d-none">
+                  <h3 class="text-light mb-3">Active / Persisted Sessions</h3>
+                  <div id="landing-sessions-list" class="list-group mb-3" style="max-height: 280px; overflow:auto;"></div>
+                  <button id="btn-sessions-back" class="btn btn-outline-light w-100 mt-2">&larr; Back to Home</button>
+               </div>
 
                 <div id="landing-lobby" class="d-none">
                     <h3 class="text-light mb-2">Session Ready</h3>
@@ -65,7 +74,8 @@
                     </div>
                   <div class="row mt-3">
                      <div class="col-6 offset-3 text-center">
-                        <button id="btn-lobby-back" class="btn btn-light btn-lg w-100" aria-label="Back to Home"><i class="fas fa-home me-2"></i>Back to Home</button>
+                        <button id="btn-lobby-back" class="btn btn-light btn-lg w-100 mb-2" aria-label="Back to Home"><i class="fas fa-home me-2"></i>Back to Home</button>
+                        <button id="owner-end-session-btn" class="btn btn-danger btn-lg w-100 d-none"><i class="fas fa-times-circle me-2"></i>End Session (Owner)</button>
                      </div>
                   </div>
                 </div>
@@ -163,6 +173,9 @@
           >
             Pending changes - Click "Update Vitals" to apply after selected delay.
           </div>
+               <div class="mt-3">
+                  <button id="owner-end-session-btn-app" class="btn btn-danger d-none">End Session (Owner)</button>
+               </div>
         </div>
 
         <div class="accordion" id="controlAccordion">
