--- a/root/index.html
+++ b/root/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Medical Monitor Simulator (Grid Layout)</title>
+    <title>Medical Monitor Simulator</title>
+    <link rel="icon" href="favicon.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
